--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "node": ">=18.12.0 <20 || >=20.8.0"
   },
   "devDependencies": {
-    "@putstack/eslint-config-typescript": "1.2.0",
-    "@putstack/prettier-config": "1.3.0",
+    "@putstack/eslint-config-typescript": "2.0.0",
+    "@putstack/prettier-config": "1.3.1",
     "@types/node": "20.10.4",
     "concurrently": "8.2.2",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
     "typescript": "5.3.3",
-    "vitest": "1.0.2"
+    "vitest": "1.0.4"
   },
   "scripts": {
     "lint": "eslint --format stylish --max-warnings 0 --cache .",
     "lint:fix": "pnpm lint --fix",
-    "prettier": "prettier . --write .",
+    "prettier": "prettier --write .",
     "prepare": "husky install",
     "stylecheck": "prettier --check .",
     "test": "vitest run",
