--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "node": ">=18.12.0 <20 || >=20.8.0"
   },
   "devDependencies": {
-    "@putstack/eslint-config-typescript": "2.0.2",
-    "@putstack/prettier-config": "1.3.1",
-    "@types/node": "20.10.6",
+    "@putstack/eslint-config-typescript": "2.1.0",
+    "@putstack/prettier-config": "1.4.0",
+    "@types/node": "20.11.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "concurrently": "8.2.2",
+    "eslint": ">=8.56.0 <9.0.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
+    "prettier": "3.2.1",
     "typescript": "5.3.3",
-    "vitest": "1.1.0"
+    "vitest": "1.2.0"
   },
   "scripts": {
     "lint": "eslint --format stylish --max-warnings 0 --cache .",
