--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@putstack/eslint-config-typescript": "2.2.0",
     "@putstack/prettier-config": "1.4.0",
-    "@types/node": "20.11.9",
+    "@types/node": "20.11.16",
     "concurrently": "8.2.2",
     "eslint": ">=8.56.0 <9.0.0",
-    "husky": "9.0.6",
-    "lint-staged": "15.2.0",
+    "husky": "9.0.10",
+    "lint-staged": "15.2.1",
     "prettier": "3.2.4",
     "typescript": "5.3.3",
     "vitest": "1.2.2"
@@ -24,7 +24,7 @@
     "lint": "eslint --format stylish --max-warnings 0 --cache .",
     "lint:fix": "pnpm lint --fix",
     "prettier": "prettier --write .",
-    "prepare": "husky install",
+    "prepare": "husky",
     "stylecheck": "prettier --check .",
     "test": "vitest run",
     "watch": "vitest watch",
