--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 save-exact = true
-strict-peer-dependencies = false
-auto-install-peers = false
+strict-peer-dependencies = true
+auto-install-peers = true
 lockfile = true
